src/styles/components/consultantType.module.scss
@import '../mixins';

.button {
  @include button-primary;

  flex-shrink: 0;
  margin-bottom: 0.5rem;
  padding: 0.5rem 1rem;
}

.buttonSelected {
  @include button-primary-selected;

  flex-shrink: 0;
  margin-bottom: 0.5rem;
  padding: 0.5rem 1rem;
}

